ultimating personalization details and fixing pagination function to work with the entire db_query not only the db name

--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -198,7 +198,7 @@
                         </div>
 
                         {{!-- pagination bar --}}
-                        <div class="container-fluid">
+                        <div class="container-fluid mt-4">
                             <nav aria-label="Page navigation example">
                                 <ul class="pagination justify-content-center">
                                     {{#with pagination_bar}}
