--- a/views/marketplace/market.hbs
+++ b/views/marketplace/market.hbs
@@ -95,8 +95,11 @@
                     <div class="row">
                         <div class="col col-12 col-lg-4">
                         </div>
+
+                        {{!-- search bar --}}
+
                         <div class="col col-8 col-lg-4">
-                            <form action="/marketplace/search/" class="d-flex" role="search" method="get">
+                            <form action="/marketplace/search" class="d-flex" role="search" method="POST">
                                 <input class="form-control me-2 " type="search" placeholder="Buscar" aria-label="Search" name="search">
                                 <button class="btn btn-outline-primary" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
         
@@ -139,7 +142,7 @@
                                                 Categorias
                                             </a>
                                             {{#each categories}}
-                                                <form action="/marketplace/search" method="get">
+                                                <form action="/marketplace/search" method="POST">
                                                     <input type="number" class="d-none" name="category" id="{{id}}" value="{{id}}">
                                                     <button type="submit" class="list-group-item list-group-item-action">{{name}}</button>
                                                 </form>
