--- a/views/admin/products/products.hbs
+++ b/views/admin/products/products.hbs
@@ -189,6 +189,26 @@
                         </div>
                     {{/if}}
                 </div>
+                
+                {{!-- pagination bar --}}
+                <div class="container-fluid mt-4">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination justify-content-center">
+                            {{#with pagination_bar}}
+                                <li class="page-item {{#unless previous}}disabled{{/unless}}"><a class="page-link" href="{{link}}?page=1"><i class="fa-solid fa-angles-left"></i></a></li>
+                                <li class="page-item {{#unless previous}}disabled{{/unless}}"><a class="page-link" 
+                                    href="{{link}}?page={{previous}}">Anterior</a></li>
+                                {{#each display_nums}}
+                                    <li class="page-item {{#if (lookup ../currentPageActive @index)}}active{{/if}}"><a class="page-link" 
+                                        href="{{link}}?page={{this}}">{{this}}</a></li>
+                                {{/each}}
+                                <li class="page-item {{#unless next}}disabled{{/unless}}"><a class="page-link" 
+                                    href="{{link}}?page={{next}}">Siguiente</a></li>
+                                <li class="page-item {{#unless next}}disabled{{/unless}}"><a class="page-link" href="{{link}}?page={{numberOfPages}}"><i class="fa-solid fa-angles-right"></i></a></li>
+                            {{/with}}
+                        </ul>
+                    </nav>
+                </div>
             </main>
         </div>
     </div>
