correcting the font sizes to the same sizes for different admin pages

--- a/views/admin/products/categories.hbs
+++ b/views/admin/products/categories.hbs
@@ -147,7 +147,7 @@
                                 <td class="order align-middle white-space-nowrap">{{id}}</td>
                                 <td class="align-middle white-space-nowrap ps-8">
                                     <a class=" align-items-center" href="/admin/edit_category/{{id}}">
-                                        <h6 class="mb-0 text-900">{{name}}</h6>
+                                        <h6 class="mb-0 text-900 h5">{{name}}</h6>
                                     </a>
                                 </td>
                                 <td class="total align-middle fw-semi-bold text-1000">{{description}}</td>
