--- a/views/admin/products/products.hbs
+++ b/views/admin/products/products.hbs
@@ -165,7 +165,7 @@
                                 <td class="order align-middle white-space-nowrap"><img src="{{img_dir}}" alt="img" width="50" ></td>
                                 <td class="align-middle white-space-nowrap ps-8">
                                     <a class=" align-items-center" href="/admin/edit_product/{{id}}">
-                                        <h6 class="mb-0 text-900">{{name}}</h6>
+                                        <h6 class="mb-0 text-900 h5">{{name}}</h6>
                                     </a>
                                 </td>
                                 <td class="total align-middle fw-semi-bold text-1000">{{price}} Bs.</td>
