correction on aligning problem reports admin page

--- a/views/admin/products/reports.hbs
+++ b/views/admin/products/reports.hbs
@@ -221,7 +221,7 @@
                                 <div class="card p-2" >
                                 <div class="card-body">
                                     <div class="row">
-                                        <div class="col">
+                                        <div class="col col-8">
                                             <h5 class="card-title">Reporte de {{name}}</h5>
                                             <p class="card-text">Clientes que crearon su cuenta para comprar produtos</p>
                                             
